--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@
   text-align: center;
 }
 
-.box{
-  background-color: black;
+div.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: whitesmoke;
 }
 
 
